--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title> Sumire layout</title>
 	<link rel="stylesheet" type="text/css" href="sumire.css" />
 	<link rel="stylesheet" type="text/css" href="responsive.css" />
@@ -13,7 +14,7 @@
     <!-- detail start -->
     <div class="wrapper">
     	<div class="container">
-    		<div class="row detail col-md-12 col-11">
+    		<div class="row detail col-md-12 col-11 ">
     			<div class="col-xl-6 imge questions1">
     			    <p>Questions?<img src="image/calla.png" height="15"><span>123-123-1234</span></p>	
     			</div>
@@ -25,7 +26,7 @@
 	    		 	       <img src="image/facebook1.png" height="20">
 	    		 	       <img src="image/twitter2.png" height="22">
 	    		 	       <img src="image/insta1.png" height="25">
-	    		 	       <img src="image/google.png" height="18">
+	    		 	       <img src="image/google.png" height="18"> 
 	    		 	    </p>
     			</div>
     		</div>
@@ -75,7 +76,7 @@
     <!-- about sumire start -->
     <div class="container">
     	<div class="row about-sumire sumire1">
-	    	<div class="col-xl-6">
+	    	<div class="col-xl-6 abt-sumire">
 	    		<img src="image/hanging.jpg" class="img-fluid">
 	    	</div>
 	    	<div class="col-xl-6 about1 sumire2">
@@ -98,27 +99,27 @@
     <!-- 4 content start -->
     <div class="container">
     	<div class="row">
-    		<div class="col-xl-3 col-6 content contents">
+    		<div class="col-xl-3 col-11 content contents">
     			<div class="circle circle1">*</div>
-    			<h3 class="content1">Why Invest With Us?</h3>
-    			<p class="content1">From Last 30 years we are in industry and have honor.</p>
-    			<p class="content2">123-123-1234</p>
+    			<h3 class="content1 ">Why Invest With Us?</h3>
+    			<p class="content1 best1">From Last 30 years we are in industry</p>
+    			
     		</div>
-    		<div class="col-xl-3 col-6 content contents">
+    		<div class="col-xl-3 col-11 content contents">
     			<div class="circle circle1">*</div>
     			<h3 class="content1">Special Techniques</h3>
-    			<p class="content1">We are providing special training to help you grow faster.</p>
+    			<p class="content1 best1">We are providing special training to help </p>
     		</div>
-    		<div class="col-xl-3 col-6 content contents">
+    		<div class="col-xl-3 col-11 content contents">
     			<div class="circle circle1">*</div>
     			<h3 class="content1">Qualified Staff</h3>
-    			<p class="content1">Our qualified best staff from industry give you best professional Knowledge.</p>
+    			<p class="content1 best1">Our qualified best staff from industry </p>
     		</div>
-    		<div class="col-xl-3 col-6 content contents">
+    		<div class="col-xl-3 col-11 content contents">
     			<div class="circle circle1">*</div>
     			<h3 class="content1">Enquiry</h3>
     			<p class="content1">Contact with professional terms.</p>
-    			<p class="content2">123-123-1234</p>
+    			<p class="content2 content3">123-123-1234</p>
     		</div>
     	</div>
     </div>
